<resources>
    <string name="app_name">DBV Finnance</string>

    <string name="sign_in">Entrar</string>
    <string name="create_account">Criar Cadastro</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_tipo_clube">Tipo do Clube</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="hint_retype_password">Repita a senha</string>
    <string name="desc_firebase_lockup">Logo e nome do aplicativo</string>
    <string name="emailpassword_title_text">DBV Finnance</string>
    <string name="title_cadastro_usuario">Cadastro de Usuário</string>
    <string name="email_nao_verificado">Verifique seu email para ativar seu cadastro</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="erro_enviar_email">Ocorreu um erro ao enviar o email</string>
    <string name="enviado_email_para">Foi enviado um email para</string>
    <string name="obrigatorio">Obrigatório</string>
    <string name="usuario_ja_cadastrado">O usuário já foi cadastrado anteriormente no sistema.</string>
    <string name="senha_invalida">Insira uma senha de no mínimo 8 caracteres contendo letras e números.</string>
    <string name="email_senha_invalidos">Email e/ou senha inválidos.</string>
    <string name="email_invalido">O email digitado é inválido.</string>
    <string name="falha_autencicacao">Autenticação falhou.</string>
    <string name="senha_nao_confere">Senhas não conferem</string>
    <string name="cadastro_realizado">Cadastro realizado com sucesso</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="label_administrador">Administrador</string>
    <string name="label_diretor">Diretor</string>
    <string name="label_tesoureiro">Tesoureiro</string>
    <string name="label_responsavel">Responsável</string>
    <string name="multi_roles_title">Escolha o Tipo de Acesso</string>

    <string name="label_gerenciar_clube">Gerenciar Clubes</string>
    <string name="label_clubes">Clubes</string>
    <string name="label_sem_resultado">Não há resultados.</string>

    <string name="title_cadastro_clube">Cadastro de Clube</string>
    <string name="hint_name_clube">Nome do Clube</string>
    <string name="hint_diretor">Diretor(a) do Clube</string>
    <string name="hint_tesoureiro">Tesoureiro(a) do Clube</string>
</resources>
